fix: footer and menu overlaping

--- a/src/styles/CalendarFooterPhone.module.css
+++ b/src/styles/CalendarFooterPhone.module.css
@@ -3,12 +3,9 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 1rem 0;
+  padding: 2.2rem 0;
   height: auto;
   position: relative;
-  /*   bottom: 0;
-  left: 0;
-  right: 0; */
   margin: 0;
   background-color: #f3f4f6;
 }
